--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="flex items-center">
-                <a href="{{ path('app_admin_document_show', { 'user': value.user.id, 'document': value.file.name }) }}" target="_blank">
+                <a href="{{ path('app_admin_document', { 'user': value.user.id, 'document': value.file.name }) }}" target="_blank">
                     <i class="bx-eye bg-custom-dark-200 rounded-xl p-3 hover:bg-custom-dark-400 transition"></i>
                 </a>
             </div>
