--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -16,6 +16,7 @@
         {% set adminLinks = [
             { text: 'navigation.admin.dashboard'|trans(), icon: 'bxs-dashboard', href: 'app_admin_home' },
             { text: 'navigation.admin.users'|trans(), icon: 'bxs-user', href: 'app_admin_users' },
+            { text: 'navigation.admin.documents'|trans(), icon: 'bxs-file', href: 'app_admin_documents' },
         ] %}
 
         {% set profileLinks = [
