--- a/templates/components/dashboard/form.html.twig
+++ b/templates/components/dashboard/form.html.twig
@@ -1,5 +1,5 @@
-<div class="flex h-full w-full items-center justify-center">
-    <div class="grid overflow-scroll rounded-xl p-12 text-white max-h-[90vh] lg:max-w-[60vw] bg-custom-dark-300 scrollbar-hide">
+<div class="grid rounded-xl p-12 text-white w-full bg-custom-dark-300">
+    <div class="grid items-center justify-center">
 
         <div class="text-center">
             <h1 class="text-3xl font-bold">{{ title }}</h1>
