--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -77,7 +77,7 @@
                     <i class="text-xl bxs-bell"></i>
                 </div>
                 <a href="{{ path('app_user_home') }}">
-                    <div class="flex items-center p-2 rounded-lg hover:bg-custom-dark-400">
+                    <div class="flex items-center p-2 rounded-lg hover:bg-custom-dark-400 transition">
                         <i class="text-4xl bxs-user-circle"></i>
                         <div class="ml-2">
                             <p class="font-semibold">{{ app.user.name }}</p>
