--- a/templates/components/dashboard/action-button-table.html.twig
+++ b/templates/components/dashboard/action-button-table.html.twig
@@ -1,3 +1,6 @@
-<a href="{{ rootParams != null ? path(root, rootParams) : path(root) }}" target="{{ isBlank == true ? '_blank' : '_self' }}">
-    <i class="{{ icon }} {{ isDanger == true ? 'bg-custom-red-100 rounded-xl p-3 hover:bg-custom-red-200' : 'bg-custom-dark-200 rounded-xl p-3 hover:bg-custom-dark-400' }} transition"></i>
+<a href="{{ rootParams != null ? path(root, rootParams) : path(root) }}" target="{{ isBlank == true ? '_blank' : '_self' }}" class="group relative">
+    <i class="{{ icon }} {{ isDanger == true ? 'bg-custom-red-100 rounded-xl p-3 hover:bg-custom-red-200 cursor-pointer' : 'bg-custom-dark-200 rounded-xl p-3 hover:bg-custom-dark-400' }} transition"></i>
+    <span class="absolute left-1/2 bottom-11 -translate-x-1/2 p-2 text-sm bg-custom-dark-400 rounded-xl hidden group-hover:block transition whitespace-nowrap">
+        {{ tooltip }}
+    </span>
 </a>
