--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -16,7 +16,7 @@
         {% set adminLinks = [
             { text: 'navigation.admin.dashboard'|trans(), icon: 'bxs-dashboard', href: 'app_admin_home', hrefs: ['app_admin_home'] },
             { text: 'navigation.admin.users'|trans(), icon: 'bxs-user', href: 'app_admin_users', hrefs: ['app_admin_users', 'app_admin_user'] },
-            { text: 'navigation.admin.documents'|trans(), icon: 'bxs-file', href: 'app_admin_documents', hrefs: ['app_admin_documents', 'app_admin_document_categories', 'app_admin_document_category_new'] },
+            { text: 'navigation.admin.documents'|trans(), icon: 'bxs-file', href: 'app_admin_documents', hrefs: ['app_admin_documents', 'app_admin_document_new', 'app_admin_document_delete', 'app_admin_document_categories', 'app_admin_document_category_new', 'app_admin_document_category_delete'] },
         ] %}
 
         {% set profileLinks = [
