--- a/templates/components/dashboard/card.html.twig
+++ b/templates/components/dashboard/card.html.twig
@@ -1,7 +1,7 @@
 <div class="flex flex-row p-5 bg-custom-dark-300 border-1 border-custom-dark-100 rounded-xl">
     <div class="flex flex-col justify-center w-full">
         <p class="mb-2 font-bold text-custom-gray-100">{{ title }}</p>
-        <p class="">{{ text }}</p>
+        <p class="break-all">{{ text }}</p>
     </div>
     <div class="flex items-center ml-5 p-3 rounded-xl" style="background-color: var(--color-custom-{{ color }});">
         <i class="flex items-center text-3xl {{ icon }}"></i>
