--- a/templates/admin/document/index.html.twig
+++ b/templates/admin/document/index.html.twig
@@ -29,6 +29,7 @@
 
     {% embed 'components/dashboard/table.html.twig' with {
         root: root,
+        rootParams: {'page': 1},
         keys: keys,
         values: documents,
         page: page,
