--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -20,11 +20,11 @@
         ] %}
 
         {% set profileLinks = [
-            { text: 'navigation.profile.logout'|trans(), icon: 'bxs-door-open', href: 'app_logout', hrefs: ['app_logout'] }
+            { text: 'navigation.utils.logout'|trans(), icon: 'bxs-door-open', href: 'app_logout', hrefs: ['app_logout'] }
         ] %}
 
         {% set utilsLinks = [
-            { text: 'navigation.profile.logout'|trans(), icon: 'bxs-door-open', href: 'app_logout', hrefs: ['app_logout'] }
+            { text: 'navigation.utils.logout'|trans(), icon: 'bxs-door-open', href: 'app_logout', hrefs: ['app_logout'] }
         ] %}
 
         <nav class='flex flex-col w-custom-navigation-profile-sm lg:w-custom-navigation-profile p-5 bg-custom-dark-300 gap-2 text-center overflow-x-hidden animate-custom-navgation-profile-open' data-profile-navigation>
@@ -82,9 +82,9 @@
                         <div class="ml-2">
                             <p class="font-semibold">{{ app.user.name }}</p>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <p class="text-sm">{{ 'role.admin'|trans() }}</p>
+                                <p class="text-sm">{{ 'roles.admin'|trans() }}</p>
                             {% else %}
-                                <p class="text-sm">{{ 'role.user'|trans() }}</p>
+                                <p class="text-sm">{{ 'roles.user'|trans() }}</p>
                             {% endif %}
                         </div>
                     </div>
