--- a/templates/security/reset_password/check_email.html.twig
+++ b/templates/security/reset_password/check_email.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    {{ 'message.form.check_email.title'|trans({}, 'forms') }}
+    {{ 'admin.form.check_email.title'|trans({}, 'forms') }}
 {% endblock %}
 
 {% block body %}
@@ -9,20 +9,20 @@
         <div class="flex flex-col items-center overflow-scroll rounded-xl p-12 text-white max-h-[90vh] lg:max-w-[60vw] bg-custom-dark-300 scrollbar-hide">
 
             <div class="text-center">
-                <h1 class="text-3xl font-bold">{{ 'message.form.check_email.title'|trans({}, 'forms') }}</h1>
-                <p class="mt-3 mb-12">{{ 'message.form.check_email.description'|trans({}, 'forms') }}</p>
+                <h1 class="text-3xl font-bold">{{ 'admin.form.check_email.title'|trans({}, 'forms') }}</h1>
+                <p class="mt-3 mb-12">{{ 'admin.form.check_email.description'|trans({}, 'forms') }}</p>
             </div>
 
 
             <div class="text-center mb-3 p-5 font-semibold bg-custom-dark-200 rounded-xl lg:max-w-[50vw]">
                 <p>
-                    {{ 'message.form.check_email.content'|trans({}, 'forms') }}
+                    {{ 'admin.form.check_email.content'|trans({}, 'forms') }}
                 </p>
             </div>
 
             <div class="flex justify-center">
                 <a href="{{ path('app_forgot_password_request') }}" class="my-5 cursor-pointer text-center rounded-xl p-3 text-xl bg-custom-orange-200 hover:bg-custom-orange-100">
-                    {{ 'message.form.check_email.resend'|trans({}, 'forms') }}
+                    {{ 'admin.form.check_email.resend'|trans({}, 'forms') }}
                 </a>
             </div>
         </div>
