--- a/templates/security/reset_password/reset.html.twig
+++ b/templates/security/reset_password/reset.html.twig
@@ -1,14 +1,14 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    {{ 'message.form.change_password.title'|trans({}, 'forms') }}
+    {{ 'admin.form.change_password.title'|trans({}, 'forms') }}
 {% endblock %}
 
 {% block body %}
     {% embed 'components/form.html.twig' with {
-        title: 'message.form.change_password.title'|trans({}, 'forms'),
-        description: 'message.form.change_password.description'|trans({}, 'forms'),
-        submit: 'message.form.change_password.submit'|trans({}, 'forms'),
+        title: 'admin.form.change_password.title'|trans({}, 'forms'),
+        description: 'admin.form.change_password.description'|trans({}, 'forms'),
+        submit: 'admin.form.change_password.submit'|trans({}, 'forms'),
         form: resetForm,
     } %}
         {% block form %}
