--- a/templates/admin/document/new_category.html.twig
+++ b/templates/admin/document/new_category.html.twig
@@ -10,9 +10,9 @@
 
 {% block body %}
     {% embed 'components/dashboard/form.html.twig' with {
-        title: 'message.form.new_document_category.title'|trans({}, 'forms'),
-        description: 'message.form.new_document_category.description'|trans({}, 'forms'),
-        submit: 'message.form.new_document_category.submit'|trans({}, 'forms'),
+        title: 'admin.form.new_document_category.title'|trans({}, 'forms'),
+        description: 'admin.form.new_document_category.description'|trans({}, 'forms'),
+        submit: 'admin.form.new_document_category.submit'|trans({}, 'forms'),
         form: form
     } %}
         {% block form %}
@@ -22,7 +22,7 @@
         {% block afterForm %}
             <p class="text-center">
                 <a href="{{ path('app_admin_document_categories') }}" class="hover:text-custom-orange-100">
-                    {{ 'message.form.new_document_category.back'|trans({}, 'forms') }}
+                    {{ 'admin.form.new_document_category.back'|trans({}, 'forms') }}
                 </a>
             </p>
         {% endblock %}
