Request system and style

--- a/templates/profile-base.html.twig
+++ b/templates/profile-base.html.twig
@@ -17,6 +17,7 @@
             { text: 'navigation.admin.dashboard'|trans(), icon: 'bxs-dashboard', href: 'app_admin_home', hrefs: ['app_admin_home'] },
             { text: 'navigation.admin.users'|trans(), icon: 'bxs-user', href: 'app_admin_users', hrefs: ['app_admin_users', 'app_admin_user', 'app_admin_user_delete'] },
             { text: 'navigation.admin.documents'|trans(), icon: 'bxs-file', href: 'app_admin_documents', hrefs: ['app_admin_documents', 'app_admin_document_new', 'app_admin_document_delete', 'app_admin_document_categories', 'app_admin_document_category_new', 'app_admin_document_category_delete'] },
+            { text: 'navigation.admin.requests'|trans(), icon: 'bxs-send', href: 'app_admin_requests', hrefs: ['app_admin_requests', 'app_admin_request'] },
         ] %}
 
         {% set profileLinks = [
